; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/rtmp-services/extr_rtmp-common.c_fill_twitch_servers_locked.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/rtmp-services/extr_rtmp-common.c_fill_twitch_servers_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.twitch_ingest = type { i8*, i32 }

@.str = private unnamed_addr constant [12 x i8] c"Server.Auto\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"auto\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @fill_twitch_servers_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fill_twitch_servers_locked(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.twitch_ingest, align 8
  store i32* %0, i32** %3, align 8
  %7 = call i64 (...) @twitch_ingest_count()
  store i64 %7, i64* %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @obs_module_text(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @obs_property_list_add_string(i32* %8, i32 %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %11 = load i64, i64* %4, align 8
  %12 = icmp ule i64 %11, 1
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %37

14:                                               ; preds = %1
  store i64 0, i64* %5, align 8
  br label %15

15:                                               ; preds = %33, %14
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %36

19:                                               ; preds = %15
  %20 = load i64, i64* %5, align 8
  %21 = call { i8*, i32 } @twitch_ingest(i64 %20)
  %22 = bitcast %struct.twitch_ingest* %6 to { i8*, i32 }*
  %23 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %22, i32 0, i32 0
  %24 = extractvalue { i8*, i32 } %21, 0
  store i8* %24, i8** %23, align 8
  %25 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %22, i32 0, i32 1
  %26 = extractvalue { i8*, i32 } %21, 1
  store i32 %26, i32* %25, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = getelementptr inbounds %struct.twitch_ingest, %struct.twitch_ingest* %6, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = getelementptr inbounds %struct.twitch_ingest, %struct.twitch_ingest* %6, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 @obs_property_list_add_string(i32* %27, i32 %29, i8* %31)
  br label %33

33:                                               ; preds = %19
  %34 = load i64, i64* %5, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %5, align 8
  br label %15

36:                                               ; preds = %15
  store i32 1, i32* %2, align 4
  br label %37

37:                                               ; preds = %36, %13
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i64 @twitch_ingest_count(...) #1

declare dso_local i32 @obs_property_list_add_string(i32*, i32, i8*) #1

declare dso_local i32 @obs_module_text(i8*) #1

declare dso_local { i8*, i32 } @twitch_ingest(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
